Fixed nav bar
Fixed navigation dropdown being too wide when vertical scroll bar is present

--- a/css/styles.css
+++ b/css/styles.css
@@ -619,7 +619,7 @@ nav {
   display: none;
   position: absolute;
   z-index: 10;
-  width: 100vw;
+  width: 100%;
   left: 0;
 }
 .nav-dropdown h2 {
