--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -50,7 +50,7 @@ nav {
         display: none;
         position: absolute;
         z-index: 10;
-        width: 100vw;
+        width: 100%;
         left: 0;
 
         h2 {
